# production_scheduler

./: .gitignore  CASCADE_FIX_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ORDER_DATE_DEPLOYMENT.md  QUALITY_EXTRACTION_TEST_SUMMARY.md  QUALITY_EXTRACTION_VERIFICATION.md  README.md  TESTING_INSTRUCTIONS.md  TEST_PP_VIEW_DEBUG.md  __init__.py  add_plan_code_fields.py  add_split_field.py  api.py  backfill_console.js  backfill_customer_names.py  bulk_update_plan_codes.py  check.py  check_color.py  check_db.py  check_db_787.py  check_psi_fields.py  cleanup_api.py  cleanup_pb_field.py  color_fix_functions.py  debug_color_504.py  debug_colour_master.py  debug_fields.py  debug_move.py  debug_orders.py  debug_orphans.py  debug_plan_codes.py  debug_plan_lookup.py  debug_seeds.py  final_cleanup_v2.py  fix.py  fix_missing_colors.py  fix_planning_sheet_colors.py  fix_sheet_dates.py  get_fields.py  git_files.txt  (+21 more)
backups/: ColorChart.vue.bak  ColorChart.vue.original  api.py.bak  api.py.original
production_scheduler/: __init__.py  api.py  cleanup_duplicates.py  cleanup_may_bug.py  debug_status.py  hooks.py  install_custom_field.py  migrate_legacy_data.py  patches.txt  planning_doctypes.py
production_scheduler/config/: desktop.py  docs.py
production_scheduler/patches/: add_slitting_unit_option.py  ensure_parent_child_trace_fields.py  ensure_slitting_spr_flag.py  fix_planning_sheet_module.py  repair_istable_schema_columns.py  rescue_deleted_planning_sheet.py  revert_mirror_table_meta.py  revert_planning_sheet_module.py
production_scheduler/production_scheduler/: migrate.py
(+55 files in other folders)
