[project]
name = "production_scheduler"
authors = [
    { name = "Admin", email = "admin@example.com"}
]
description = "Production Scheduler App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
